AT-95: Increased drop down width to avoid wrapping

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -11385,7 +11385,7 @@ General comments:
 }
 
 #hub-primary .dropdown_3 {
-    width: 145px;
+    width: 160px;
 }
 
 #hub-primary .menuItem:hover .dropdown_1,
